fixed more typos

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -67,9 +67,9 @@ galaxies: high redshift -- methods: statistical
 \section{Introduction} 
 Mergers of dark-matter-dominated galaxy clusters probes properties
 of the cluster components like no other systems. 
-Clusters of galaxies are made up of $\sim80\%$ of dark matter in mass content, 
-with a smaller  portion of intercluster gas($\sim15\%$ in mass content), and
-sparsely spaced galaxies ($\sim2\%$ in mass content). During a merger of
+In terms of mass content, dark matter makes up $\sim80\%$ of the mass of clusters
+of galaxies, a smaller portion of the mass consist of intercluster
+gas($\sim15\%$ in mass content), and sparsely spaced galaxies ($\sim2\%$ in mass content). During a merger of
 clusters, the subclusters are accelerated to high speeds of several
 thousand \kilo \meter~\second$^{-1}$. The offsets of
 different components of the subclusters reflect the differences in the
@@ -370,7 +370,7 @@ inferred centroid locations correspond to a mean projected separation
 We outline the outputs of the simulation here to facilitate the discussion
 of the design of the weights used in the simulation. The simulation
 provides PDF estimates for 8 output variables. Variables
-of highest interest include the time dependence and the angle $\alpha$, which is
+of the highest interest include the time dependence and the angle $\alpha$, which is
 defined to be the projection angle between the plane of the sky and the
 merger axis. Other output variables are dependent on $\alpha$ and time. Specifically, the simulation denotes the time dependence by
 providing several characteristic time-scales, including the time
@@ -481,7 +481,7 @@ nonuniformities can lower the polarization below the Ensslin model value.
 simulations of radio relics from \cite{S13} show varying polarization
 fraction across and along the relic assuming $\alpha = 0$, resulting in a
 lower integrated polarization fraction. For example, it is possible to see 
-a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
+an edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
 Furthermore, \cite{S13} shows that after convolving the
 simulated polarization signal with a Gaussian kernel of 4\arcmin~to
 illustrate effects of non-zero beam size, the polarization fraction drops
@@ -577,7 +577,7 @@ El Gordo is longer.
 We found that the two subclusters collided with a relative velocity of $2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$, at an estimated projection
 angle of $\alpha = 21\degree\pm^{9}_{11}$. From our analysis of the two
 scenarios, we found that El Gordo is more likely to be observed at a returning
-phase with a estimate of $TSC_1 = 0.91\pm^{0.22}_{0.39}$ Gyr. This puts the
+phase with an estimate of $TSC_1 = 0.91\pm^{0.22}_{0.39}$ Gyr. This puts the
 estimate of the time of collision to be when the age of the universe was
 $\sim5.4$ Gyr. We present an
 overview of all the estimated variables in table~\ref{tab:outputs}, with
@@ -1291,7 +1291,7 @@ penalize the simulated values being different from our observed data
 \end{enumerate} \par
 The second quantity that we compute is the Wald statistic at a range of possible $\beta$ values.
 Wald statistic is usually used hypothesis testing.
-Computing the Wald statisic allows us to ask the question, given a particular model (merger
+Computing the Wald statisic allows us to ask, given a particular model (merger
 scenario),
 whether the null value (sample mean) is in the confidence
 interval \citep{Wasserman04}. The Wald statistic that we compute for each model is: 
