edited according to Dave"s Oct 10 comments

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -1,7 +1,8 @@
 \input{style}
 \input{bib_alias}
-\title[The dynamics and merging scenario of ACT-CL J0102-4915, El
-Gordo]{The dynamics and merging scenario of the galaxy cluster ACT-CL J0102-4915, El Gordo}
+\title[The return of the merging galaxy cluster ACT-CL J0102-4915, El
+Gordo?]
+{The return of the merging galaxy cluster ACT-CL J0102-4915, El Gordo?}
 \author[K. Y. Ng et al.]{K. Y. Ng,$^{1}$
 	W. A. Dawson,$^{2}$ 
 	D. Wittman,$^{1}$
@@ -28,25 +29,20 @@ properties of the radio relic to reduce the uncertainties of the dynamical varia
 and determine 3D configuration of a cluster merger, ACT-CL J0102-4915, nicknamed El Gordo. 
 From the double radio relic observation and the X-ray observation of a
 comet-like gas morphology induced by motion of the cool core, 
-it is believed that El Gordo is observed shortly after the first
+it is widely believed that El Gordo is observed shortly after the first
 core-passage of the subclusters.
-%At a redshift of 0.87, El Gordo (M$_{200c} = 
-%2.75\times10^{15} \pm^{7.4}_{1.5}$ M$_{\sun}$) is one of the most massive
-%clusters discovered in the early universe. The two subclusters of El
-%Gordo has a mass ratio of around 2:1. 
-%The X-ray and weak-lensing data of El Gordo show an offset of X kpc between
-%the intracluster gas and the dark matter (DM) at $\sim$4 $\sigma$ level.
-%All these features of El Gordo make it part of a valuable class of
-%dissociative mergers that can probe the self-interaction of dark matter.
 We employ a Monte Carlo simulation to investigate the three-dimensional (3D)
 configuration and dynamics of El Gordo. 
 %and provide a summary of the probability
 %density functions of the inferred variables.
-By making use the polarization
-fraction of the radio relic, we are able to constrain the estimate of the
+Using the polarization
+fraction of the radio relic, we constrain the estimate of the
 angle between the sky and the merger axis to be $\alpha = 21\degree
 \pm^9_{11}$. We find the relative 3D merger speed of El Gordo to be
-$2400\pm^{400}_{200} ~\kilo\meter~\second^{-1}$. We put our estimates of
+$2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$. The two possible
+time-since-collision estimated are $0.46\pm^{0.9}_{0.16}$ Gyr and $0.91\pm^{0.22}_{0.39}$ Gyr
+for the outgoing and returning scenario respectively.
+We put our estimates of
 the time-since-collision into context by showing that if the time-averaged
 shock velocity approximately equal or smaller than the collisional velocity of the
 corresponding subcluster $< 1100~ \kilo\meter~\second^{-1}$ in the center of mass
@@ -56,16 +52,16 @@ We compare and contrast the merger scenario of El Gordo with that of the Bullet
 Cluster, and show that this late-stage merging scenario might help
 explain why the southeast dark matter lensing peak of El Gordo is
 closer to the merger center than the southeast cool core. 
-Finally, we provide our insight on what information from simulations and
-observations would help us better constrain the merger scenarios for other
-bimodal merging clusters. 
+%Finally, we provide our insight on what information from simulations and
+%observations would help us better constrain the merger scenarios for other
+%bimodal merging clusters. 
 \end{abstract}
 \begin{keywords}
 gravitational lensing -- dark matter -- cosmology: observations -- galaxies: clusters: individual (ACT-CL J0102-4915) --
 galaxies: high redshift -- methods: statistical 
 \end{keywords}
 \section{Introduction} 
-Mergers of dark-matter-dominated galaxy clusters probes properties
+Mergers of dark-matter-dominated galaxy clusters probe properties
 of the cluster components like no other systems. 
 In terms of mass content, dark matter makes up $\sim80\%$ of the mass of clusters
 of galaxies, a smaller portion of the mass consist of intercluster
@@ -620,15 +616,15 @@ crossing time of $\sim2~\giga$yr. The observable time scale of the radio
 relics is also on the scale of $\sim1~\giga$yr.\par 
 Based on section~\ref{sec:positionprior}, we present the most likely
 value of $\beta = 0.9$ in Fig.~\ref{fig:our_guessed_scenario} to show that
-the returning case is preferred for both the calculations of the NW and the
-SE relic. This conclusion favoring the returning case ($M_{ret}$) holds true for the
+the returning model is preferred for both the calculations of the NW and the
+SE relic. This conclusion favoring the returning model ($M_{ret}$) holds true for the
 relevant range of $  \beta
 < 1.1$, which corresponds to the time-averaged velocity of the relics at
 $\langle v_{NW relic} \rangle < 1000~\kilo\meter~\second^{-1}$ and $\langle
 v_{SE relic} \rangle < 1800~\kilo\meter~\second^{-1}$ in the center of
-mass frame. For comparison purpose, we found that an extreme, and unlikely
+mass frame. For comparison, we found that an extreme, and unlikely
 range of $\beta > 1.5$ would be needed for the outgoing scenario($M_{out}$) to be
-preferred. (See appendix~\ref{app:Bayes_factor} for plots of all the range
+preferred. (See appendix~\ref{app:Bayes_factor} for plots of the range
 of $\beta$ that we examined). We marginalized $\beta$ to compute the
 probability of the simulated relic location being compatible with the
 observed location $P(S_{proj} \cap S_{obs}| M)$. We then computed   
@@ -636,12 +632,13 @@ $P(S_{proj} \cap S_{obs} | M_{ret}) / P(S_{proj} \cap S_{obs} | M_{out})$.
 The ratio of the two probabilities is found to be $\approx
 2.1$ for the NW relic and a relative probability of $\approx 460$ for the
 SE relic, favoring the returning scenario despite the
-uncertainties. (See appendix~\ref{app:Bayes_factor}). Additionally, we
-computed the Wald statistic that tests if the sample mean (observed
-location) of the location of the relic is within the confidence interval of
-the two models, and found that the returning scenario to predict the relic
-location to be more compatible with the observed relic location. (See
-Figure \ref{fig:waldtest}). 
+uncertainties. (See appendix~\ref{app:Bayes_factor}). 
+%Additionally, we
+%computed the Wald statistic that tests if the sample mean (observed
+%location) of the location of the relic is within the confidence interval of
+%the two models, and found that the returning scenario to predict the relic
+%location to be more compatible with the observed relic location. (See
+%Figure \ref{fig:waldtest}). 
 %It is possible to convert the Wald statistic
 %for each scenario to a p-value \citep{Wasserman04} at each $\beta$, but the
 %p-value only addresses the question: ``assuming a model is true, what is 
@@ -1204,6 +1201,7 @@ different velocities.}
 	\end{center}
 \end{minipage}
 \end{figure*}
+
 \section{COMPARISON OF THE OUTGOING AND RETURNING SCENARIO}
 \label{app:Bayes_factor}
 %\input{supplement}
@@ -1211,40 +1209,46 @@ different velocities.}
 	\includegraphics[width=\linewidth]{polar_prior_bounds.png}
 	\caption{Comparison of the PDFs of the observed position of the NW relic (red bar
 		includes 95\% confidence interval of location of relic in the center of
-		mass frame) with the	predicted position from the two simulated merger scenarios (blue for
-	outgoing and green for the returning scenario). 
-	For the most likely value of $\beta < 1.1$, the returning scenario is preferred. 
-	For comparison purpose, we also show that the shock velocity has to
-	be as extreme as $1.5~v_{3D, NW}(t_{col})$ (top panel) for the outgoing
-	scenario to be favored. 
-	Note that we made use of the	polarization weight for producing this figure. 
+		mass frame) with the	predicted position from the two simulated merger scenarios (blue for outgoing and green for the returning scenario). 
+	For the plausible values of $\beta (\beta < 1.1)$, the returning model is preferred. 
+	For comparison purpose, we also show that $\beta > 1.3$ (top panel) for the outgoing scenario to be favored. 
+	Note that we made use of the polarization weight for producing this figure. 
 	\label{fig: positionprior}}
 \end{figure}
+
 \begin{figure}
 \includegraphics[width=\linewidth]{polar_prior_bounds_SE.png}
 	\caption{Comparison of the PDFs of the observed position of the SE relic (red bar
 		includes 95\% confidence interval of location of relic in the center of
-		mass frame) with the	predicted position from the two simulated merger scenarios (blue for
-	outgoing and green for the returning scenario). 
-	For the most likely value of $\beta < 1.1$, the returning scenario is preferred. 
+		mass frame) with the predicted position from the two simulated merger scenarios (blue for outgoing and green for the returning scenario). 
+	For the plausible values of $\beta < 1.1$, the returning scenario is preferred. 
 	We obtained similar conclusion about the merger scenario as for the NW
 	relic calculation.
 	\label{fig:positionprior_SE}}
 \end{figure}
+
 \begin{figure}
-	\includegraphics[width=\linewidth]{wald.eps}
-	\caption{Wald statistic to show whether the observed relic location is
-		within the confidence interval of each merger scenario model. (lower
-		value
-		means more compatible)  
-	\label{fig:waldtest}}
+	\includegraphics[width=\linewidth]{prob_ratio.eps}
+	\caption{Probability ratio between the returning model (numerator) and
+		the outgoing model. We remind readers $\beta$ is a factor
+		relating the \it{time-averaged} shock velocity and the collisional
+		velocity of the corresponding subcluster.  
+	\label{fig:prob_ratio}}
 \end{figure}
-Here, we compare the different merger scenarios through two statistical 
-quantities and show that they consistently give the conclusion that the returning
-scenario is favored. The first quantity that we use answers the question:
+
+Here, we compare the different merger scenarios for the two relics and show that they consistently give the conclusion that the returning
+scenario is favored for the plausible range of $\beta$. We compute :
 which scenario would have a higher (marginalized) probability of producing simulated
-values ($s_{proj}$)
-compatible with the observed location of the radio relic ($s_{obs}$). 
+values ($s_{proj}$) compatible with the observed location of the radio relic ($s_{obs}$). 
+We set our priors set to be uniform for the marginalization: 
+\begin{equation}
+	f(\beta | M_{ret}) = f(\beta | M_{out}) =  
+	\begin{cases}
+		& \text{const}~\text{if } 0.7 \leq \beta \leq 1.5 \\
+		& 0~\text{otherwise}.
+	\end{cases}
+\end{equation}
+
 Quantitatively, we want to compute and compare the probability:  
 \begin{align} 
 	&P(s_{proj} \text{ compatible with }s_{obs} | M)  \label{eqn:prob}\\
@@ -1254,9 +1258,8 @@ Quantitatively, we want to compute and compare the probability:
 \end{align}
 where $f$ indicates the corresponding PDF, $M$
 represents one of the merger scenarios, and $\beta$ is defined in equation
-\ref{eqn:NW_speed} and \ref{eqn:SE_speed},
-$s_{proj} \in S_{proj}$ and $s_{obj} \in S_{obs}$. 
-And we found: 
+\ref{eqn:NW_speed}, $s_{proj} \in S_{proj}$ and $s_{obj} \in S_{obs}$. 
+We found: 
 \begin{align}
 	&P(S_{proj} \cap S_{obj} | M_{ret}) / P(S_{proj} \cap S_{obj} |
 	M_{out})\\
@@ -1268,14 +1271,6 @@ And we found:
 \end{align}
 which shows that the returning scenario is favored over the outgoing
 scenario. 
-And we have set our priors set to be uniform: 
-\begin{equation}
-	f(\beta | M_{ret}) = f(\beta | M_{out}) =  
-	\begin{cases}
-		& \text{const}~\text{if } 0.7 \leq \beta \leq 1.5 \\
-		& 0~\text{otherwise}.
-	\end{cases}
-\end{equation}
 
 This test quantity differs from the traditional hypothesis testing or model comparison in several ways: 
 \begin{enumerate}
@@ -1289,22 +1284,22 @@ penalize the simulated values being different from our observed data
 \item we marginalized the uncertainty in $\beta$ to be as conservative
 	as possible, instead of assuming a fixed value of $\beta$.
 \end{enumerate} \par
-The second quantity that we compute is the Wald statistic at a range of possible $\beta$ values.
-Wald statistic is usually used hypothesis testing.
-Computing the Wald statisic allows us to ask, given a particular model (merger
-scenario),
-whether the null value (sample mean) is in the confidence
-interval \citep{Wasserman04}. The Wald statistic that we compute for each model is: 
-\begin{align}
-	W(\beta) = \frac{\bar{s}_{obs} - \mu(\beta)}{\sigma / (n)^{1/2}} 
-\end{align}
-where $\bar{x}$ is the sample mean, $\mu(\beta)$, $\sigma$ and $n$ are the
-population mean, population standard deviation and size of samples of the
-simulated model respectively. A higher Wald statistic value would represent
-a larger difference between the observed and model value, while taking into account the model uncertainty. Within the range of
-most likely $0.7 < \beta < 1.5$, the Wald statistic shows that the observed
-relic location is more compatible with the confidence interval of the returning
-scenario. (See Figure~\ref{fig:waldtest})
+%The second quantity that we compute is the Wald statistic at a range of possible $\beta$ values.
+%Wald statistic is usually used hypothesis testing.
+%Computing the Wald statisic allows us to ask, given a particular model (merger
+%scenario),
+%whether the null value (sample mean) is in the confidence
+%interval \citep{Wasserman04}. The Wald statistic that we compute for each model is: 
+%\begin{align}
+%	W(\beta) = \frac{\bar{s}_{obs} - \mu(\beta)}{\sigma / (n)^{1/2}} 
+%\end{align}
+%where $\bar{x}$ is the sample mean, $\mu(\beta)$, $\sigma$ and $n$ are the
+%population mean, population standard deviation and size of samples of the
+%simulated model respectively. A higher Wald statistic value would represent
+%a larger difference between the observed and model value, while taking into account the model uncertainty. Within the range of
+%most likely $0.7 < \beta < 1.5$, the Wald statistic shows that the observed
+%relic location is more compatible with the confidence interval of the returning
+%scenario. (See Figure~\ref{fig:waldtest})
 
 
 
