fixed serious typo on TSC0

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -1,8 +1,8 @@
 \input{style}
 \input{bib_alias}
-\title[The return of the merging galaxy cluster ACT-CL J0102-4915, El
+\title[The return of the merging galaxy subclusters of ACT-CL J0102-4915, El
 Gordo?]
-{The return of the merging galaxy cluster ACT-CL J0102-4915, El Gordo?}
+{The return of the merging galaxy subclusters of ACT-CL J0102-4915, El Gordo?}
 \author[K. Y. Ng et al.]{K. Y. Ng,$^{1}$
 	W. A. Dawson,$^{2}$ 
 	D. Wittman,$^{1}$
@@ -40,13 +40,13 @@ fraction of the radio relic, we constrain the estimate of the
 angle between the sky and the merger axis to be $\alpha = 21\degree
 \pm^9_{11}$. We find the relative 3D merger speed of El Gordo to be
 $2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$. The two possible
-time-since-collision estimated are $0.46\pm^{0.9}_{0.16}$ Gyr and $0.91\pm^{0.22}_{0.39}$ Gyr
+time-since-collision estimated are $0.46\pm^{0.09}_{0.16}$ Gyr and $0.91\pm^{0.22}_{0.39}$ Gyr
 for the outgoing and returning scenario respectively.
 We put our estimates of
 the time-since-collision into context by showing that if the time-averaged
 shock velocity approximately equal or smaller than the collisional velocity of the
-corresponding subcluster $< 1100~ \kilo\meter~\second^{-1}$ in the center of mass
-frame, the two subclusters are more likely to be moving towards, rather
+corresponding subcluster $< 1100~ \kilo\meter~\second^{-1}$ in the {\it
+center of mass frame}, the two subclusters are more likely to be moving towards, rather
 than away from each other, after the apocenter. 
 We compare and contrast the merger scenario of El Gordo with that of the Bullet
 Cluster, and show that this late-stage merging scenario might help
@@ -422,11 +422,10 @@ randomly polarized. The high reported integrated polarization fraction from
 \citet{L13} can be explained by a highly aligned magnetic field,
 compressing the ICM during a merger
 (\citealt{E98}, \citealt{vanWeeren10}, \citealt{Feretti12}).
-This picture is consistent with a high polarization fraction perpendicular
-to this magnetic field along the relic. 
+%This picture is consistent with a high polarization fraction.
 \par
 We designed the weights to reflect how $\alpha$ decreases monotonically as the
-maximum observable integrated polarization fraction. 
+maximum observable integrated polarization fraction ($\langle P \rangle$). 
 \begin{figure}
 	\includegraphics[width=\linewidth]{Ensslin_polar_fig.png}
 	\caption{Predictions of polarization percentage of the radio relic at a
@@ -456,7 +455,8 @@ magnetic pressure only, with the spectral index of the radio
 emission being $\alpha_{radio} = 0.86$, the compression ratio of the
 magnetic field being
 $R=2.7$ and the spectral index of the electrons being $\gamma = 2.7$. 
-This model predicts a maximum integrated polarization fraction of
+This model predicts a maximum integrated polarization fraction 
+ of
 $\sim60\%$ when $\alpha \rightarrow 0$. 
 %We consider 39\degree as an upper bound on the projection angle since this 
 % idealized model assume isotropic distribution of magnetic field and
@@ -607,7 +607,7 @@ the time of observation.\par
 
 \subsection{Time-since-collision (TSC) and the merger scenario}
 The simulation gives two estimates for
-the time-since-collision, with $TSC_0 = 0.46\pm^{0.9}_{0.16}~\giga \text{yr}$
+the time-since-collision, with $TSC_0 = 0.46\pm^{0.09}_{0.16}~\giga \text{yr}$
 and $TSC_1 =0.91\pm^{0.39}_{0.22}~\giga\text{yr}$. Both the estimates of
 $TSC_0$ and $TSC_1$ are compatible physical time-scales of observable
 features of El Gordo. Both estimates are lower than the approximate
@@ -649,9 +649,9 @@ Finally, we note that the estimate of NW shock velocity at $2500
 \pm^{400}_{300}~\kilo\meter~\second^{-1}$ by \cite{L13} was reported with respect to
 the turbulent ICM, not the propagation velocity with respect to center of
 mass, so we have not made use of the estimate of \cite{L13} in this
-calculation. If the resolution of the radio data in \cite{L13} is high
-enough, an alternative constraint of the TSC can be constructed from
-the spectral aging of the electrons that were involved in the generation of the
+calculation. If there are radio data in more frequency bands than
+the radio data available now \citep{L13}, an alternative constraint of the
+TSC can be constructed from the spectral aging of the electrons that were involved in the generation of the
 radio relics, such as shown in \citet{Stroe14}. \par
 \begin{figure}
 	\includegraphics[width=\linewidth]{our_guess.png}
@@ -917,7 +917,7 @@ of the galaxies. One pending question is to investigate if the luminosity
 density peak or number density peaks would better represent the galaxy
 distributions. The galaxy number density map of El Gordo
 \citepalias{Jee13} shows noteworthy $\sim0.2~\mega$pc offset between the SE
-galaxy number density peak and the SE DM centroid, while almost no offset
+galaxy number density peak and the SE DM centroid, while there is almost no offset
 between the corresponding luminosity peak and DM centroid. Before there is a
 conclusion about how the galaxy-DM offset would vary over
 the different phase of the merger Fig.~\ref{fig:merger_scenario}, it is
@@ -1004,9 +1004,11 @@ Monte Carlo simulation, in particular, we
 		$43\degree \pm ^{26}_{24}$ to $21 \degree \pm^{9}_{11}$ (See
 		Fig.~\ref{fig:geom_geom}). By performing sensitivity analysis, we
 		showed that this weighting function helps reduce uncertainty for the dynamical
-		variables without changing the estimates drastically ($< 20\%$) \\ 
-	\item inferred a {\it relative} collisional velocity between the
-		subclusters of El Gordo as $2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$ \\ 
+		variables without changing the estimates drastically ($< 20\%$).\\ 
+	\item inferred a {\it relative} collisional velocity 
+		between the subclusters of El Gordo as 
+		$2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$  
+		(when the subcluster centroids coincided)\\ 
 	\item showed that a returning scenario is favored if the $\langle v_{NW relic}\rangle \leq
 		1000~\kilo
 		\meter~\second^{-1}$ and $\langle v_{SE relic}\rangle \leq
@@ -1230,6 +1232,8 @@ We set our priors set to be uniform for the marginalization:
 		& 0~\text{otherwise}.
 	\end{cases}
 \end{equation}
+which is more conservative than the most likely range of $\beta$, which is
+$0.7 < \beta < 1.1$.
 We found: 
 \begin{align}
 	&P(S_{proj} \cap S_{obj} | M_{ret}) / P(S_{proj} \cap S_{obj} |
@@ -1275,7 +1279,7 @@ $f(S_{proj} \cap S_{obj})$ to penalize the simulated values being different from
 %
 %
 \begin{figure}
-	\includegraphics[width=\linewidth]{prob_ratio.eps}
+	\includegraphics[width=\linewidth]{prob_ratio.png}
 	\caption{Probability ratio between the returning model (numerator) and
 		the outgoing model at given $\beta$. We remind readers $\beta$ is a factor
 		relating the {\it time-averaged} shock velocity and the collisional
