--- a/texFiles/output_table.tex
+++ b/texFiles/output_table.tex
@@ -21,6 +21,6 @@ $v_{rad}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&360&140-630&27-880&&310&110-5
 $v_{3D}(t_{col})$ & \kilo \meter~\second$^{-1}$ &&2800&2400-3700&2100-4200&&2400&2200-2800&2100-3500\\
 \bottomrule
 \end{tabularx}\\
-\footnotesize{$\dagger$ CI stands for credible interval}\\
+\footnotesize{$\dagger$ CI stands for confidence interval}\\
 \end{minipage}
 \end{table*}
