--- a/texFiles/style.tex
+++ b/texFiles/style.tex
@@ -36,7 +36,11 @@
 %\usepackage{Times}
 
 %%%%% AUTHORS - PLACE YOUR OWN MACROS HERE %%%%%
-\usepackage{hyperref}
+%\usepackage{hyperref}
+\usepackage[colorlinks=true,
+            linkcolor=blue,
+            urlcolor=blue,
+					citecolor=blue]{hyperref}
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{amsmath}
